add main section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Start project</title>
+    <title>William King</title>
   </head>
 
   <body>
@@ -50,6 +50,31 @@
           >
         </div>
       </header>
+
+      <section class="main">
+        <div class="main__info">
+          <div class="main__title title">I’m William K.</div>
+          <div class="main__skills">
+            <ul class="main__list text">
+              <li class="main__item">Web Designer</li>
+              <li class="main__item">/</li>
+              <li class="main__item">UI Designer</li>
+              <li class="main__item">/</li>
+              <li class="main__item">Graphic designer</li>
+            </ul>
+          </div>
+          <div class="main__desc desc">
+            Rutrum cursus varius ullamcorper venenatis faucibus lobortis turpis
+            dignissim. Commodo pellentesque tristique aliquet turpis. Morbi
+            risus imperdiet
+          </div>
+          <a href="/" class="main__btn btn _primary">Explore My Work</a>
+        </div>
+        <div class="main__photo">
+          <img class="main__img" src="img/main/william.png" alt="William King">
+        </div>
+      </section>
+
       <section class="services">
         <div class="title">My<span>Services</span></div>
         <div class="desc">
@@ -58,78 +83,78 @@
           imperdiet
         </div>
         <div class="services-list row">
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/cup.svg" alt="cup" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
               </div>
             </div>
           </div>
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/shield-check.svg" alt="check" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
               </div>
             </div>
           </div>
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/menu.svg" alt="menu" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
               </div>
             </div>
           </div>
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/send.svg" alt="send" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
               </div>
             </div>
           </div>
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/setting.svg" alt="setting" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
               </div>
             </div>
           </div>
-          <div class="services-list__item col-2">
+          <div class="services-list__item item col-2">
             <div class="services-list__icon">
               <img src="img/services/headphone.svg" alt="headphones" />
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc">
+              <div class="services-list__desc text">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -190,6 +215,76 @@
           Rutrum cursus varius ullamcorper venenatis faucibus lobortis turpis
           dignissim. Commodo pellentesque tristique aliquet turpis. Morbi risus
           imperdiet
+        </div>
+        <div class="customers-list row">
+          <div class="customers-list__item item col-2">
+            <div class="customers-list__desc text">
+              Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+              turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+              Morbi risus imperdiet
+            </div>
+            <div class="customers-list__person">
+              <div class="customers-list__icon">
+                <img src="img/customers/customer1.png" alt="Leslie" />
+              </div>
+              <div class="customers-list__info">
+                <div class="customers-list__name text">Leslie Alexander</div>
+                <div class="customers-list__position text">Dog Trainer</div>
+              </div>
+            </div>
+          </div>
+          <div class="customers-list__item item col-2">
+            <div class="customers-list__desc text">
+              Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+              turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+              Morbi risus imperdiet
+            </div>
+            <div class="customers-list__person">
+              <div class="customers-list__icon">
+                <img src="img/customers/customer2.png" alt="Guy" />
+              </div>
+              <div class="customers-list__info">
+                <div class="customers-list__name text">Guy Hawkins</div>
+                <div class="customers-list__position text">Web Designer</div>
+              </div>
+            </div>
+          </div>
+          <div class="customers-list__item item col-2">
+            <div class="customers-list__desc text">
+              Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+              turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+              Morbi risus imperdiet
+            </div>
+            <div class="customers-list__person">
+              <div class="customers-list__icon">
+                <img src="img/customers/customer3.png" alt="Devon" />
+              </div>
+              <div class="customers-list__info">
+                <div class="customers-list__name text">Devon Lane</div>
+                <div class="customers-list__position text">
+                  Medical Assistant
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="customers-list__item item col-2">
+            <div class="customers-list__desc text">
+              Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+              turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+              Morbi risus imperdiet
+            </div>
+            <div class="customers-list__person">
+              <div class="customers-list__icon">
+                <img src="img/customers/customer4.png" alt="Floyd" />
+              </div>
+              <div class="customers-list__info">
+                <div class="customers-list__name text">Floyd Miles</div>
+                <div class="customers-list__position text">
+                  Marketing Coordinator
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
