add contact section and footer

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         <div class="header__nav">
           <ul class="header__list" id="headerList">
             <li class="header__item">
-              <a class="header__link _active" href="/">About</a>
+              <a class="header__link link _active" href="/">About</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="/">Services</a>
+              <a class="header__link link" href="/">Services</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="/">Portfolio</a>
+              <a class="header__link link" href="/">Portfolio</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="/">Testimonails</a>
+              <a class="header__link link" href="/">Testimonails</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="/">Pricing</a>
+              <a class="header__link link" href="/">Pricing</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="/">Contact</a>
+              <a class="header__link link" href="/">Contact</a>
             </li>
             <span class="material-icons icon-close">close</span>
           </ul>
@@ -55,7 +55,7 @@
         <div class="main__info">
           <div class="main__title title">I’m William K.</div>
           <div class="main__skills">
-            <ul class="main__list text">
+            <ul class="main__list text-type3">
               <li class="main__item">Web Designer</li>
               <li class="main__item">/</li>
               <li class="main__item">UI Designer</li>
@@ -71,7 +71,11 @@
           <a href="/" class="main__btn btn _primary">Explore My Work</a>
         </div>
         <div class="main__photo">
-          <img class="main__img" src="img/main/william.png" alt="William King">
+          <img
+            class="main__img"
+            src="img/main/william.png"
+            alt="William King"
+          />
         </div>
       </section>
 
@@ -89,7 +93,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -102,7 +106,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -115,7 +119,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -128,7 +132,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -141,7 +145,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -154,7 +158,7 @@
             </div>
             <div class="services-list__info">
               <div class="services-list__title">Service title</div>
-              <div class="services-list__desc text">
+              <div class="services-list__desc text-type1">
                 Rutrum cursus varius ullamcorper venenatis faucibus lobortis
                 turpis dignissim. Commodo pellentesque tristique aliquet turpis.
                 Morbi risus imperdiet
@@ -218,7 +222,7 @@
         </div>
         <div class="customers-list row">
           <div class="customers-list__item item col-2">
-            <div class="customers-list__desc text">
+            <div class="customers-list__desc text-type1">
               Rutrum cursus varius ullamcorper venenatis faucibus lobortis
               turpis dignissim. Commodo pellentesque tristique aliquet turpis.
               Morbi risus imperdiet
@@ -228,13 +232,17 @@
                 <img src="img/customers/customer1.png" alt="Leslie" />
               </div>
               <div class="customers-list__info">
-                <div class="customers-list__name text">Leslie Alexander</div>
-                <div class="customers-list__position text">Dog Trainer</div>
+                <div class="customers-list__name text-type1">
+                  Leslie Alexander
+                </div>
+                <div class="customers-list__position text-type1">
+                  Dog Trainer
+                </div>
               </div>
             </div>
           </div>
           <div class="customers-list__item item col-2">
-            <div class="customers-list__desc text">
+            <div class="customers-list__desc text-type1">
               Rutrum cursus varius ullamcorper venenatis faucibus lobortis
               turpis dignissim. Commodo pellentesque tristique aliquet turpis.
               Morbi risus imperdiet
@@ -244,13 +252,15 @@
                 <img src="img/customers/customer2.png" alt="Guy" />
               </div>
               <div class="customers-list__info">
-                <div class="customers-list__name text">Guy Hawkins</div>
-                <div class="customers-list__position text">Web Designer</div>
+                <div class="customers-list__name text-type1">Guy Hawkins</div>
+                <div class="customers-list__position text-type1">
+                  Web Designer
+                </div>
               </div>
             </div>
           </div>
           <div class="customers-list__item item col-2">
-            <div class="customers-list__desc text">
+            <div class="customers-list__desc text-type1">
               Rutrum cursus varius ullamcorper venenatis faucibus lobortis
               turpis dignissim. Commodo pellentesque tristique aliquet turpis.
               Morbi risus imperdiet
@@ -260,15 +270,15 @@
                 <img src="img/customers/customer3.png" alt="Devon" />
               </div>
               <div class="customers-list__info">
-                <div class="customers-list__name text">Devon Lane</div>
-                <div class="customers-list__position text">
+                <div class="customers-list__name text-type1">Devon Lane</div>
+                <div class="customers-list__position text-type1">
                   Medical Assistant
                 </div>
               </div>
             </div>
           </div>
           <div class="customers-list__item item col-2">
-            <div class="customers-list__desc text">
+            <div class="customers-list__desc text-type1">
               Rutrum cursus varius ullamcorper venenatis faucibus lobortis
               turpis dignissim. Commodo pellentesque tristique aliquet turpis.
               Morbi risus imperdiet
@@ -278,8 +288,8 @@
                 <img src="img/customers/customer4.png" alt="Floyd" />
               </div>
               <div class="customers-list__info">
-                <div class="customers-list__name text">Floyd Miles</div>
-                <div class="customers-list__position text">
+                <div class="customers-list__name text-type1">Floyd Miles</div>
+                <div class="customers-list__position text-type1">
                   Marketing Coordinator
                 </div>
               </div>
@@ -287,6 +297,176 @@
           </div>
         </div>
       </section>
+      <section class="pricing">
+        <div class="title">My <span>Pricing</span></div>
+        <div class="desc">
+          Rutrum cursus varius ullamcorper venenatis faucibus lobortis turpis
+          dignissim. Commodo pellentesque tristique aliquet turpis. Morbi risus
+          imperdiet
+        </div>
+        <div class="pricing-info row">
+          <div class="pricing-info__col item col-3">
+            <div class="pricing-info__part1">
+              <div class="pricing-info__title text-type3">Silver</div>
+              <div class="pricing-info__price title">$99.0</div>
+              <div class="pricing-info__desc text-type2">
+                Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+                turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+                Morbi risus imperdiet
+              </div>
+            </div>
+            <div class="pricing-info__part2">
+              <a href="/" class="pricing-info__btn btn _secondary"
+                >Get Started</a
+              >
+              <div class="pricing-info__list">
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-info__col item col-3">
+            <div class="pricing-info__part1">
+              <div class="pricing-info__title text-type3">Silver</div>
+              <div class="pricing-info__price title">$99.0</div>
+              <div class="pricing-info__desc text-type2">
+                Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+                turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+                Morbi risus imperdiet
+              </div>
+            </div>
+            <div class="pricing-info__part2">
+              <a href="/" class="pricing-info__btn btn _secondary"
+                >Get Started</a
+              >
+              <div class="pricing-info__list">
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-info__col item col-3">
+            <div class="pricing-info__part1">
+              <div class="pricing-info__title text-type3">Silver</div>
+              <div class="pricing-info__price title">$99.0</div>
+              <div class="pricing-info__desc text-type2">
+                Rutrum cursus varius ullamcorper venenatis faucibus lobortis
+                turpis dignissim. Commodo pellentesque tristique aliquet turpis.
+                Morbi risus imperdiet
+              </div>
+            </div>
+            <div class="pricing-info__part2">
+              <a href="/" class="pricing-info__btn btn _secondary"
+                >Get Started</a
+              >
+              <div class="pricing-info__list">
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+                <div class="pricing-info__item text-type2">
+                  <span class="material-icons">done</span>
+                  12 GB Free space
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="title">Get in <span>touch</span></div>
+        <div class="desc">
+          Rutrum cursus varius ullamcorper venenatis faucibus lobortis turpis
+          dignissim. Commodo pellentesque tristique aliquet turpis. Morbi risus
+          imperdiet
+        </div>
+        <div class="contact__forms">
+          <input type="text" class="contact__name" placeholder="Enter Your Name" />
+          <input type="email" class="contact__email" placeholder="Enter your email address" />
+          <textarea name="message" id="" placeholder="Enter Message"></textarea>
+          <input type="submit" value="Send Message" class="btn _primary" />
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="footer__container">
+          <div class="footer__copyright">© <span id="year" onclick="copyright()"></span> All rights reserved. Designed by <span>SA7MAN.</span></div>
+          <div class="footer__nav">
+            <ul class="footer__list" id="headerList">
+              <li class="footer__item">
+                <a class="footer__link link" href="/">Twitter</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link link" href="/">Dribble</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link link" href="/">Github</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link link" href="/">Instagram</a>
+              </li>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="script.js"></script>
   </body>
